
erDiagram
    PACKS ||--o{ PACK_ITEMS : contains
    PERSONS ||--o{ PACKS : carries

    ITEMS ||--o{ PACK_ITEMS : included_in
    ITEMS ||--o{ SET_ITEMS : grouped_in_sets
    ITEMS ||--o{ ITEM_LABELS : tagged_with

    LABELS ||--o{ ITEM_LABELS : applied_to

    ITEM_SETS ||--o{ SET_ITEMS : groups
    ITEM_TYPES ||--o{ ITEM_SETS : categorizes

    ITEM_TYPES ||--o{ ITEMS : types
    ITEM_TYPES ||--o{ ITEM_TYPE_FIELDS : defines_fields
    MANUFACTURERS ||--o{ ITEMS : makes

    TRIP ||--o{ TRIP_PERSONS : includes_persons
    PERSONS ||--o{ TRIP_PERSONS : participates_in_trips

    TRIP_PERSONS ||--o{ TRIP_PERSON_PACKS : has_packs
    PACKS ||--o{ TRIP_PERSON_PACKS : assigned_to_person

    TRIP_PERSONS ||--o{ TRIP_PERSON_ITEMS : has_items
    ITEMS ||--o{ TRIP_PERSON_ITEMS : assigned_to_person

    PACKING_LISTS ||--o{ PACKING_LIST_LABELS : has_labels
    LABELS ||--o{ PACKING_LIST_LABELS : applied_to_lists

    SETTINGS {
        int id PK "always 1"
        string weight_unit "g, oz"
        string distance_unit "km, mi"
        string temperature_unit "c, f"
        string volume_unit "ml, fl_oz"
    }

    BACKUP_CONFIG {
        int id PK "always 1"
        bool enabled
        string schedule "cron expression"
        int retention_count
        timestamptz last_run_at
        string last_status "success, error"
        string last_error
    }

    PERSONS {
        uuid id PK
        string name "required"
        string gender "optional"
        date birthdate "optional"
        decimal body_weight_grams "optional; always stored in grams"
        string conditioning_level "optional; sedentary, average, athletic, military"
    }

    ITEMS {
        uuid id PK
        uuid manufacturer_id FK "required"
        string type_id FK "required"
        string name "required"
        boolean is_active "required"
        string description "optional"
        string source_url "optional"
        decimal price "optional"
        decimal weight_grams "optional; always stored in grams"
        decimal volume_ml "optional; always stored in ml"
        int default_quantity
        string default_carry_status "packed, worn"
        boolean is_default "auto-add to new packs"
        bytes image_blob "optional"
        string image_mime_type "required when image_blob is set"
        int image_size_bytes "required when image_blob is set"
        int image_width_px "required when image_blob is set"
        int image_height_px "required when image_blob is set"
        json attributes_json "dynamic fields for custom item types"
        datetime created_at
        datetime updated_at
    }

    ITEM_TYPES {
        string id PK "type key; supports system + user-defined types"
        string name "display name"
        string description "optional"
        string base_profile "consumable, wearable, shelter, sleep, electronics"
        boolean is_system "true for built-in types"
        datetime created_at
        datetime updated_at
    }

    ITEM_TYPE_FIELDS {
        uuid id PK
        string item_type_id FK
        string field_key "machine key; unique within item type"
        string field_label
        string data_type "string, integer, number, boolean, enum"
        boolean is_required
        json enum_options_json "required when data_type is enum"
        decimal min_value "optional"
        decimal max_value "optional"
        string unit "optional"
        int sort_order
        datetime created_at
        datetime updated_at
    }

    LABELS {
        uuid id PK
        string name UK "unique label name"
        string color "optional; hex color for UI display"
        datetime created_at
        datetime updated_at
    }

    ITEM_LABELS {
        uuid id PK
        uuid item_id FK
        uuid label_id FK "unique with item_id"
        datetime created_at
    }

    MANUFACTURERS {
        uuid id PK
        string name UK
        string website
    }

    ITEM_SETS {
        uuid id PK
        string name
        string set_category FK "required; references item_types.id"
        string description
        boolean is_active
        datetime created_at
        datetime updated_at
    }

    SET_ITEMS {
        uuid id PK
        uuid set_id FK
        uuid item_id FK "unique with set_id"
        int quantity
        string notes
        int sort_order
    }

    PACKS {
        uuid id PK
        uuid person_id FK "required; who carries this pack; ON DELETE CASCADE"
        string name
        string trip_type "day_hike, overnight, multi_day, thru_hike"
        string notes
        datetime created_at
        datetime updated_at
    }

    PACK_ITEMS {
        uuid id PK
        uuid pack_id FK
        uuid item_id FK "unique with pack_id"
        int quantity
        string carry_status "packed, worn; default: packed"
        string notes
        datetime created_at
        datetime updated_at
    }

    TRIP {
        uuid id PK
        string name
        string trip_type "day_hike, overnight, multi_day, thru_hike"
        duration duration
        string notes
        string trip_komoot_url
        string trip_strava_url
        string trip_wanderer_url
        number total_distance_km
        datetime created_at
        datetime updated_at
    }

    TRIP_PERSONS {
        uuid id PK
        uuid trip_id FK
        uuid person_id FK "unique with trip_id"
    }

    TRIP_PERSON_PACKS {
        uuid id PK
        uuid trip_person_id FK
        uuid pack_id FK "unique with trip_person_id"
    }

    TRIP_PERSON_ITEMS {
        uuid id PK
        uuid trip_person_id FK
        uuid item_id FK "unique with trip_person_id"
        int quantity
        datetime created_at
        datetime updated_at
    }

    PACKING_LISTS {
        uuid id PK
        string name
        string description
        datetime created_at
        datetime updated_at
    }

    PACKING_LIST_LABELS {
        uuid id PK
        uuid packing_list_id FK
        uuid label_id FK "unique with packing_list_id"
        datetime created_at
    }